--- a/templates/show_catalog.html
+++ b/templates/show_catalog.html
@@ -42,19 +42,19 @@ Show defects
   }
 </style>
 <style>
-/*table {
+  /*table {
     table-layout: fixed;
 }*/
-td {
+  td {
     /*word-wrap:break-word;*/
-	word-break: break-all;
-}
+    word-break: break-all;
+  }
 </style>
 <div class="col">
   <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
     style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
     <nav class="nav flex-column show p-4">
-      <a class="nav-link" value ="0" href="/show_catalog"> ВСЕ ДЕФЕКТЫ </a>
+      <a class="nav-link" value="0" href="/show_catalog"> ВСЕ ДЕФЕКТЫ </a>
       {% for i in defects %}
       <a class="nav-link" value="{{ i.id }}" href="/show_catalog/{{ i.id }}"> {{ i.defect_name }}</a>
       {% endfor %}
@@ -108,50 +108,24 @@ td {
 
 
 
-<!-- <script src="../static/js/table.js"></script> -->
+<script type="text/javascript" src="../static/js/base.js"></script>
 <script>
-//console.log(this.href.substring(this.href.lastIndexOf('/') + 1));
 
-       // var el = document.getElementById(id).getElementsByTagName('a');
-//let url = document.location.href;
 
-////////////////////////////////////////////////////////////////////////////////////////////
-function urlName (){
-	let url  = document.location.href; // получаем href страницы
-	let nm = url.match(/(?<=\/\/.+\/)\w+/); //Получаем из htef блок наименования страницы
-	nm = nm[0]
-	let num = url.match(/(?<=\/\/.+\/\w+\/)\d{1,}/);
-	if (num == null){
-		num = '0';
-		}
-	else {
-		num = num[0]
-		};
-	 return {nm, num}
-};
-/////////////////////////////////////////////////////////////////////////////////////////////
+  let navName = document.querySelector(".nav.flex-column.show");
+  //console.log(navName);
+  if (navName != null) {
+    let a = navName.getElementsByTagName("a");
+    //console.log(a);
+    for (var i = 0; i < a.length; i++) {
+      let value = a[i].getAttribute("value");
+      //console.log("value =", value);
+      if (value == urlName().num) {
+        a[i].className += " active";
+      };
+    };
+  };
 
-console.log('urlName =',urlName());
-console.log('urlName =',urlName.nm);
-console.log('urlName =',urlName.num);
-let u  = document.location.href;
-console.log('u =', u);
-//let e = u.substring(u.indexOf("//"));
-//console.log('e =', e);
-//let r = u.match(/\/\D+\//);
-//console.log('r =', r);
-//let num = e.substring(e.lastIndexOf("/")+1);
-//console.log('num =',num);
-let z = u.match(/(?<=\/\/.+\/)\w+/);
-console.log('z =',z[0]);
-let n = u.match(/(?<=\/\/.+\/\w+\/)\d{1,}/);
-if (n == null){
-	n = '0';
-	console.log('n =', n);
-	}
-else {
-	console.log('n =', n[0])
-	};
 </script>
 
 {% endblock %}
