--- a/templates/catalog_update.html
+++ b/templates/catalog_update.html
@@ -117,13 +117,13 @@ Update
 
 <script>
   let a = document.getElementById(this.id);
-console.log (a);
+//console.log (a);
     let d = document.getElementsByTagName('select');
-    console.log (d)
+   // console.log (d)
 	var ids = document.querySelectorAll('[id]');
-    console.log (ids)
+    //console.log (ids)
     Array.prototype.forEach.call( ids, function( el, i ) {
-        console.log( el.id ); // log the ID
+       // console.log( el.id ); // log the ID
     });
     function getValue(id) {
 
@@ -138,15 +138,15 @@ console.log (a);
 console.log(f,g);
 
 if (f == "defect_name" && g == "add_defect"){
-console.log("OEEE defect name");
+//console.log("OEEE defect name");
 document.location.href="/add_defect";
 }
 else if (f == "operation_name" && g == "add_operation"){
-    console.log("OEEE operation name");
+    //console.log("OEEE operation name");
     document.location.href="/add_operation";
     }
    else if (f == "product_name" && g == "add_product"){
-        console.log("OEEE product name");
+        //console.log("OEEE product name");
         document.location.href = "/add_product";
         }
  //}
@@ -171,7 +171,7 @@ else if (f == "operation_name" && g == "add_operation"){
 <script>
     function filesize() {
         let file = document.getElementById("image").files[0].size;
-        console.log('fs=', file);
+        //console.log('fs=', file);
 
         //let a = 'filesize'+'='+file;
 
