--- a/templates/operation_update.html
+++ b/templates/operation_update.html
@@ -143,7 +143,7 @@ Update defect
 <!---------------------------------------------------------------------------------------->
   <div class='page' id="add_operation"></div>     
 <script>
-
+// изменяем таблицу при изменении окна
   window.onload = function () {
     Height();
   };
