--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,12 +1,12 @@
-{% extends "base1.html" %}
+{% extends "base.html" %}
 
 {% block title %}Profile{% endblock %}
+{% block nav %}
+{% endblock %}
+{% block main %}
 
-{% block body %}
 
-<div class="container">
-  <div class="row">
-    <div class="col">
+    <div class="col-md-6">
 
       <h1>Profile</h1>
       <hr>
@@ -24,7 +24,6 @@
 
 
     </div>
-  </div>
-</div>
+ 
 
 {% endblock %}
