--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -9,29 +9,39 @@ Sign in
 {% block main %}
 
 
-    <div class="col-md-4">
+<div class="col-md-4">
 
-      <h1>Авторизация</h1>
-      <hr>
+  <h1>Авторизация</h1>
+  <hr>
 
-      <form action="/sign_in" method="POST">
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+  {% for category, message in messages %}
+  <div class="p-1 mb-2 bg-{{ category }} text-white">{{ message }}</div>
+  {% endfor %}
+  {% else %}
+  <br>
+  {% endif %}
+  {% endwith %}
+  
+  <form action="/sign_in" method="POST">
 
-        <div class="form-group">
-          <label>Логин</label>
-          <input class="form-control" type="text" name="username">
-        </div>
-
-        <div class="form-group">
-          <label>Пароль</label>
-          <input class="form-control" type="password" name="password">
-        </div>
-<br>
-        <button type="submit" class="btn btn-outline-secondary">Войти</button>
-
-      </form>
-
+    <div class="form-group">
+      <label>Логин</label>
+      <input class="form-control" type="text" name="username">
     </div>
-  </div>
+    <br>
+    <div class="form-group">
+      <label>Пароль</label>
+      <input class="form-control" type="password" name="password">
+    </div>
+    <br>
+    <button type="submit" class="btn btn-outline-secondary">Войти</button>
+
+  </form>
+
+</div>
+</div>
 </div>
 
 {% endblock %}
