--- a/templates/add_defect.html
+++ b/templates/add_defect.html
@@ -71,7 +71,7 @@ Add
 
 <br>
 <br>
-<div class="col-md-8">
+<div class="col-md-9">
 
   <h2>Или выберите наименование дефекта для редактирования или удаления</h2>
   <div class="tableFixHead">
@@ -111,6 +111,27 @@ Add
 
 <script>
 
-</script>
+  window.onload = function () {
+    Height();
+  };
+  window.onresize = function () {
+      Height();
+    };
+  
+  function Height (){
+    let divTable =document.querySelector('.tableFixHead');
+    let bodyHeight = document.documentElement.clientHeight
+  
+    //if (divTable.clientHeight > 150){
+    if (bodyHeight > 665){
+      divTable.style.height = (bodyHeight - divTable.offsetTop - 50) +'px';
+      }
+    else {
+      divTable.style.height = 200+"px";
+      }
+    };
+  </script>
+
+
 
 {% endblock %}
