--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -24,7 +24,7 @@ Sign in
   {% endif %}
   {% endwith %}
   
-  <form action="/sign_in" method="POST">
+  <form action="" method="POST">
 
     <div class="form-group">
       <label>Логин</label>
