--- a/templates/catalog_list.html
+++ b/templates/catalog_list.html
@@ -47,7 +47,7 @@ Defect
 
 <div class="col">
   <!--{{ catalog_list.picture }}-->
-  <img src="/{{ catalog_list.picture }}" class="img-fluid" alt="NO PICURE">
+  <img src="/{{ catalog_list.picture }}" class="img-fluid" alt="NO PICURE" style="max-height: calc(100vh - 15vh); width: auto">
 </div>
 </div>
 
