--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@
     </div>
   </main>
 
-  <script src="{{ url_for('static', filename='js/base.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/base.js') }}?v2.03"></script>
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 
   <script type="text/javascript">shineLinks('navbarCollapse');</script>
